  variable is still accepted but has been removed from the documentation.
* When the 'encoding' variable was set to '8bit' and a message contained
  characters that were not representable in the outgoing character set
  in its body but not in its header, the characters were replaced by
  question marks and the message was sent, instead of being rejected
  (Bugreport by Suresh Ramasubramanian).
* When the header of an outgoing message contained a non-ASCII character
  but the body did not, the name of the international character set was
  used for declaring the content-type of the body too. Us-ascii is now
  used for the body in such cases.
* When the 'fullnames' variable was set and the full name of a recipient
  was the only string in both header and body of an outgoing message that
  contained non-ASCII characters, no conversion between terminal character
  set and outgoing character set was performed for it.
* Resolved a symbol conflict with SVR4 systems like Solaris that lead to
  failed builds because of a redeclaration of 'enum idtype'.

[11.19] released 1/2/05
* A 'chained-junk-tokens' variable was introduced for the Bayesian junk
  mail filter. If set, the filter considers two-word tokens as described
  in Jonathan A. Zdziarski's paper 'Advanced Language Classification using
  Chained Tokens', <http://www.nuclearelephant.com/papers/chained.html>.
* When running in a UTF-8 locale, unprintable characters are now replaced
  by Unicode control pictures or the Unicode replacement character when
  printing to a terminal.
* The 'show' command now also avoids writing unprintable characters to a
  terminal. Same for the 'classify' command with the 'verbose' option set.
* Only MIME-encode words in header fields if they start with '=?' or end
  with '?=' (instead of encoding any words containing '?', '=', or '_'),
  and declare them as 'us-ascii' if they do not contain any bytes with the
  highest bit set (Bugreport by Suresh Ramasubramanian).